--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 	<div class="map"><a href="">试试</a></div>
 	<div class="div1">先安装Ruby</div>
 	<div class="div2">sass监听文件改动：sass --watch sass/index.scss:css/index.css(sass文件中的样式表必须以“.scss”结尾)</div>
+	<div class="div3">
+		<p>
+			expanded 编译排版格式:sass --watch sass/index.scss:css/index.css --style expanded
+		</p>
+	</div>
 </body>
 </html>
